[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/pointholder2.png" type="Texture" id=1]
[ext_resource path="res://assets/blahaj_model_fluffel_lv3_final.png" type="Texture" id=2]
[ext_resource path="res://assets/sea_of_love_splash.png" type="Texture" id=3]
[ext_resource path="res://Count.gd" type="Script" id=4]
[ext_resource path="res://assets/ok_button.png" type="Texture" id=5]
[ext_resource path="res://assets/friendship_meter_progress.png" type="Texture" id=6]
[ext_resource path="res://assets/friendship_meter.png" type="Texture" id=7]
[ext_resource path="res://assets/friendship_meter_under.png" type="Texture" id=8]
[ext_resource path="res://assets/shop_disable_chocolate.png" type="Texture" id=9]
[ext_resource path="res://Points.gd" type="Script" id=10]
[ext_resource path="res://assets/background.png" type="Texture" id=11]
[ext_resource path="res://assets/shop_icon.png" type="Texture" id=12]
[ext_resource path="res://assets/Font/bubblegum-sans/BubblegumSans-Regular.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Control.gd" type="Script" id=14]
[ext_resource path="res://assets/shop_add_chocolate.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 13 )

[node name="Node2D" type="Node2D"]
position = Vector2( 0, 1 )
script = ExtResource( 4 )

[node name="canvas" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="canvas"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="canvas"]
position = Vector2( 6, -44 )
pitch_scale = 1.84
area_mask = 0

[node name="Control" type="Control" parent="canvas"]
margin_left = 9.0
margin_top = -10.0
margin_right = 49.0
margin_bottom = 30.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart" type="Sprite" parent="canvas/Control"]
position = Vector2( 403, 297 )
texture = ExtResource( 1 )

[node name="Points" type="Label" parent="canvas/Control"]
margin_left = 391.333
margin_top = 274.667
margin_right = 691.333
margin_bottom = 374.667
custom_fonts/font = SubResource( 3 )
text = "gospoints"
autowrap = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="Control" parent="canvas/Control"]
margin_left = -9.0
margin_top = 10.0
margin_right = 31.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FriendshipMeter" type="TextureProgress" parent="canvas/Control/HealthBar"]
margin_left = 591.0
margin_top = 108.0
margin_right = 1366.0
margin_bottom = 358.0
texture_under = ExtResource( 8 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 6 )
tint_progress = Color( 0.964706, 0.529412, 1, 1 )

[node name="Level" type="Label" parent="canvas/Control"]
margin_left = 946.0
margin_top = 247.0
margin_right = 1039.0
margin_bottom = 290.0
custom_fonts/font = SubResource( 4 )
text = "Level 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="ItemList" parent="canvas/Control"]
visible = false
margin_left = 24.0
margin_top = 881.0
margin_right = 1824.0
margin_bottom = 1081.0
max_columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChocolateButton" type="TextureButton" parent="canvas/Control/GridContainer"]
margin_left = 479.0
margin_top = -12.0
margin_right = 658.0
margin_bottom = 196.0
disabled = true
texture_normal = ExtResource( 15 )
texture_disabled = ExtResource( 9 )

[node name="ShopButton" type="TextureButton" parent="canvas"]
margin_left = 247.0
margin_top = 697.0
margin_right = 506.0
margin_bottom = 1004.0
texture_normal = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buddy" type="TextureButton" parent="canvas"]
margin_left = 544.0
margin_top = 333.0
margin_right = 2080.0
margin_bottom = 1127.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PopupSplash" type="TextureRect" parent="canvas"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 204.0
margin_top = 128.0
margin_right = 204.0
margin_bottom = 128.0
rect_scale = Vector2( 1.668, 0.948 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="closebutton" type="TextureButton" parent="canvas/PopupSplash"]
margin_left = 739.208
margin_top = 86.4979
margin_right = 1763.21
margin_bottom = 1110.5
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="canvas/Control/GridContainer/ChocolateButton" to="." method="_on_ChocolateButton_pressed"]
[connection signal="pressed" from="canvas/ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="pressed" from="canvas/Buddy" to="." method="_on_Buddy_pressed"]
[connection signal="pressed" from="canvas/Buddy" to="canvas/Control" method="_on_Buddy_pressed"]
[connection signal="pressed" from="canvas/PopupSplash/closebutton" to="." method="_on_closebutton_pressed"]
